<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/Text"
            android:paddingTop="20dp"
            android:layout_centerHorizontal="true"
            android:hint="@string/insert_barcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </EditText>

        <Button
            android:onClick="barCodeButton"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:background="@drawable/button_xml"
            android:id="@+id/ButtonGen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:layout_below="@+id/Text"
            android:layout_centerHorizontal="true"
            android:text="@string/gen_barcode">
        </Button>
        <TextView
            android:id="@+id/text_to_scan"
            android:textSize="9pt"
            android:layout_width="wrap_content"
            android:text="@string/text_scan_to_code"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/ButtonGen"
            android:layout_marginTop="10dp">
        </TextView>
        <ImageView
            android:id="@+id/asset_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_to_scan"
            android:src="@drawable/ic_baseline_arrow_downward_24"
            android:layout_centerHorizontal="true">
        </ImageView>

        <ImageView
            android:id="@+id/ImageView"
            android:padding="5dp"
            android:background="@drawable/image_view_borders"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/coupon_numb_scan"
            android:layout_centerHorizontal="true">
        </ImageView>
        <ImageView
            android:id="@+id/ImageViewIconScan"
            android:background="@drawable/ic_baseline_document_scanner_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/here_code_display">
        </ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/here_code_display"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="8pt"
            android:text="@string/here_code_display">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/coupon_numb_scan"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/asset_view"
            android:textSize="8pt"
            android:text="@string/here_code_display">
        </TextView>
    </RelativeLayout>
</LinearLayout>
</RelativeLayout>