<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCouponActivity">
    <TextView
        android:id="@+id/text_press_pdf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/load_pdf_press"
        android:layout_marginTop="10dp"
        android:textSize="8pt">
    </TextView>
    <ImageView
        android:id="@+id/load_pdf_asset_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_press_pdf"
        android:src="@drawable/ic_baseline_arrow_downward_24"
        android:layout_centerHorizontal="true">
    </ImageView>
    <RelativeLayout
        android:id="@+id/rel_pdf_imageview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="50dp"
        android:background="@drawable/image_view_borders"
        android:layout_below="@id/load_pdf_asset_view">
    <ImageView
        android:onClick="loadPdfFromDocument"
        android:id="@+id/ImageViewIconScan"
        android:background="@drawable/ic_baseline_picture_as_pdf_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
    </ImageView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_button_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:padding="10dp"
        android:layout_below="@+id/rel_pdf_imageview">
        <Button
            android:id="@+id/button_load_coupon"
            android:onClick="LoadCodeNumberToShared"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_off_xml"
            android:textColor="@color/white"
            android:text="@string/press_load_button">
        </Button>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/button_load_coupon">
        </TextView>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/tex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rel_button_load">
    <TextView
        android:id="@+id/text_to_show_coupon_loaded"
        android:textSize="8pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/show_loaded_coupon_number">
    </TextView>
        <ImageView
            android:id="@+id/ImageViewCheckCoupon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_check_24"
            android:layout_marginStart="10dp">
        </ImageView>
</RelativeLayout>

  </RelativeLayout>